Some constraint issues but forms are now dynamic

--- a/Newman/Base.lproj/Main.storyboard
+++ b/Newman/Base.lproj/Main.storyboard
@@ -27,22 +27,37 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wKY-4a-dre">
                                                 <rect key="frame" x="0.0" y="0.0" width="130" height="30"/>
                                                 <state key="normal" title="WATER PROOFING"/>
+                                                <connections>
+                                                    <action selector="waterProofingButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XCp-1g-oY7"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ats-3s-8ph">
                                                 <rect key="frame" x="150" y="0.0" width="98" height="30"/>
                                                 <state key="normal" title="STRUCTURAL"/>
+                                                <connections>
+                                                    <action selector="structuralButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="k58-du-dMy"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zqy-cQ-fdl">
                                                 <rect key="frame" x="268" y="0.0" width="136" height="30"/>
                                                 <state key="normal" title="BRICK REPAIR/TINT"/>
+                                                <connections>
+                                                    <action selector="brickRepairButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QTh-pw-brk"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p09-dS-RmA">
                                                 <rect key="frame" x="424" y="0.0" width="134" height="30"/>
                                                 <state key="normal" title="CONCRETE REPAIR"/>
+                                                <connections>
+                                                    <action selector="concreteRepairButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8m2-MA-FwB"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v6K-Mx-Bzc">
                                                 <rect key="frame" x="578" y="0.0" width="104" height="30"/>
                                                 <state key="normal" title="STONE REPAIR"/>
+                                                <connections>
+                                                    <action selector="stoneRepairButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aIi-6K-o1J"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -57,29 +72,52 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ODc-Z9-gFf">
                                 <rect key="frame" x="0.0" y="924" width="1366" height="100"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oHU-ZQ-WLR">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oHU-ZQ-WLR">
                                         <rect key="frame" x="667" y="35" width="32" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <state key="normal" title="Next"/>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="4W6-sJ-foN"/>
+                                    <constraint firstItem="oHU-ZQ-WLR" firstAttribute="centerX" secondItem="ODc-Z9-gFf" secondAttribute="centerX" id="aXn-iD-Axw"/>
+                                    <constraint firstItem="oHU-ZQ-WLR" firstAttribute="centerY" secondItem="ODc-Z9-gFf" secondAttribute="centerY" id="drk-di-evn"/>
                                 </constraints>
                             </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q2T-93-rUQ">
+                                <rect key="frame" x="50" y="120" width="1266" height="804"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="a7M-HI-6iI">
+                                        <rect key="frame" x="0.0" y="201" width="1266" height="200"/>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="a7M-HI-6iI" firstAttribute="leading" secondItem="q2T-93-rUQ" secondAttribute="leading" id="4Bv-tT-26h"/>
+                                    <constraint firstItem="a7M-HI-6iI" firstAttribute="width" secondItem="q2T-93-rUQ" secondAttribute="width" id="RZR-Ky-JYh"/>
+                                    <constraint firstAttribute="bottom" secondItem="a7M-HI-6iI" secondAttribute="bottom" id="mVl-qq-vl6"/>
+                                    <constraint firstAttribute="trailing" secondItem="a7M-HI-6iI" secondAttribute="trailing" id="niR-Uk-Q6p"/>
+                                    <constraint firstItem="a7M-HI-6iI" firstAttribute="top" secondItem="q2T-93-rUQ" secondAttribute="top" id="sy9-6o-8b8"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="q2T-93-rUQ" secondAttribute="trailing" constant="50" id="4WJ-3W-80Y"/>
                             <constraint firstItem="9nF-8V-n0F" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Coz-4x-H9b"/>
+                            <constraint firstItem="q2T-93-rUQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="LGX-yr-Fcl"/>
                             <constraint firstItem="ODc-Z9-gFf" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Nab-1S-I8S"/>
                             <constraint firstItem="9nF-8V-n0F" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Nmq-ue-Bxp"/>
                             <constraint firstItem="9nF-8V-n0F" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="f7z-gm-cRQ"/>
+                            <constraint firstItem="ODc-Z9-gFf" firstAttribute="top" secondItem="q2T-93-rUQ" secondAttribute="bottom" id="kmF-Hb-USz"/>
+                            <constraint firstItem="q2T-93-rUQ" firstAttribute="top" secondItem="9nF-8V-n0F" secondAttribute="bottom" id="lUw-3P-3bA"/>
                             <constraint firstItem="ODc-Z9-gFf" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="sP2-B8-7FZ"/>
                             <constraint firstItem="ODc-Z9-gFf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wId-qc-pdK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="formContainer" destination="a7M-HI-6iI" id="Wta-Am-4jG"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
